# leaderboard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-ci.yml  pages.yml
challenges/: README.md
challenges/bayer_sorter/: README.md  leaderboard.txt
challenges/bayer_sorter/solutions/: 240325_mfschubert_02d89d3df06fee343a4fb01652e5f5d0cd72d2312d6eb4d422fa0ba469cf1277.json  240325_mfschubert_7f7f450c030dd3e7fc0f92827c359d87215f8f69ef24377fceab5401c7274aa0.json  (+10 more)
challenges/ceviche_beam_splitter/: README.md  leaderboard.txt
challenges/ceviche_lightweight_wdm/: README.md  leaderboard.txt
challenges/ceviche_lightweight_wdm/solutions/: 230719_ferber_00.csv
challenges/ceviche_mode_converter/: README.md  leaderboard.txt
challenges/ceviche_power_splitter/: README.md  leaderboard.txt
challenges/ceviche_waveguide_bend/: README.md  leaderboard.txt
challenges/ceviche_wdm/: README.md  leaderboard.txt
challenges/diffractive_splitter/: README.md  leaderboard.txt
challenges/meta_atom_library/: README.md  leaderboard.txt
challenges/metagrating/: README.md  leaderboard.txt
challenges/metalens/: README.md  leaderboard.txt
challenges/photon_extractor/: README.md  leaderboard.txt
docs/: _config.yml  _toc.yml  index.md  submissions.md
docs/notebooks/: bayer_sorter.ipynb  ceviche_challenges.ipynb  diffractive_splitter.ipynb  meta_atom_library.ipynb  metagrating.ipynb  metalens.ipynb  photon_extractor.ipynb
scripts/: eval.py  summary.py
src/invrs_leaderboard/: data.py  summary.py  utils.py
tests/: test_new_solutions.py  test_summary.py
(+142 files in other folders)
